# VideoTranscoder

./: .gitignore  Docker-compose.yaml  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: test.yml
app/: dependencies.py
app/alembic/: env.py
app/alembic/versions/: 2026_02_20_1425-80bfd923e091_create_users_table.py  2026_03_03_1652-5f4670c2d10a_add_video_table.py  2026_03_11_1609-4d1af99f8a13_add_path_field.py
app/api/: validators.py
app/api/v1/: __init__.py  auth.py  task.py  video.py
app/celery/: celery_app.py
app/celery/tasks/: video_tasks.py
app/core/: config.py  security.py
app/database/: db.py
app/models/: __init__.py  users.py  video.py
app/repositories/: user_repository.py  video_repository.py
app/schemas/: __init__.py  users.py  videos.py
app/services/: user_service.py  video_service.py
app/validators/: video_validator.py
tests/: conftest.py  test_auth.py  test_videos.py
