[project]
name = "videotranscoder"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Orlovsky",email = "orlovski15555@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "fastapi[standart] (>=0.129.0,<0.130.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "ruff (>=0.15.2,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"

[tool.ruff]
exclude = [
    "tests/",
    "app/alembic/",
    "*.env",
]
